[package]
name = "luro_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
songbird = "0.3"
sled = "0.34"
tracing = "0.1"
tokio = "1"
poise = "0.5"
serde = { version = "1", default-features = false, features = [
    "derive",
] }
toml = { version = "0.7.4" }

