[package]
name = "luro_dice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
poise = "0.5"
luro_core = { path = "../../lib/luro_core" }
luro_utilities = { path = "../../lib/luro_utilities" }
