[package]
name = "luro_e621"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5"
rand = "0.8"
serde_json = "1"
urlencoding = "2.1"
chrono = "0.4"
reqwest = { version = "0.11", features = [
    "json",
] }
serde = { version = "1", default-features = false, features = [
    "derive",
] }
luro_utilities = { path = "../../lib/luro_utilities" }
luro_core = { path = "../../lib/luro_core" }
