[package]
name = "luro_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5"
regex = "1"
luro_utilities = { path = "../../../src/lib/luro_utilities" }
luro_core = { path = "../../../src/lib/luro_core" }
luro_data = { path = "../../../src/lib/luro_data" }
luro_sled = { path = "../../../src/lib/luro_sled" }
luro_furaffinity = { path = "../../../src/lib/luro_furaffinity" }