[package]
name = "luro_furaffinity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5"
rand = "0.8"
serde_json = "1"
regex = "1"
futures = { version = "0.3.13", default-features = false }
reqwest = { version = "0.11", features = [
    "json",
] }
serde = { version = "1", default-features = false, features = [
    "derive",
] }
luro_utilities = { path = "../../../src/lib/luro_utilities" }
luro_core = { path = "../../../src/lib/luro_core" }
luro_data = { path = "../../../src/lib/luro_data" }