[package]
name = "luro_songbird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5"
chrono = "0.4"
rand = "0.8"
luro_utilities = { path = "../../../src/lib/luro_utilities" }
luro_core = { path = "../../../src/lib/luro_core" }


[dependencies.songbird]
features = ["builtin-queue"]
version = "0.3"